[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hackasm"
version = "0.1.0"
description = "nand2tetris Chapter 6 Hack Assembler"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
hackasm = "hackasm.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
